envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "api.andkra.eu"
              - "www.andkra.eu"
              routes:
              - match:
                  prefix: "/chath"
                route:
                  cluster: chathub
              # - match:
              #     prefix: "/service/2"
              #   route:
              #     cluster: service2
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: chathub
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: chathub
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: chathub
                port_value: 80
  # - name: service2
  #   connect_timeout: 0.25s
  #   type: strict_dns
  #   lb_policy: round_robin
  #   http2_protocol_options: {}
  #   load_assignment:
  #     cluster_name: service2
  #     endpoints:
  #     - lb_endpoints:
  #       - endpoint:
  #           address:
  #             socket_address:
  #               address: service2
  #               port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
